# MatMultBenchmark

./: .gitignore  CMakeLists.txt
cmake/: utils.cmake
docker/: Dockerfile
gui/Electron/: package.json
gui/Electron/src/: index.html  main.js
gui/JavaFX/: build.gradle
gui/JavaFX/src/main/java/: module-info.java
gui/JavaFX/src/main/java/com/matmultbench/: BenchmarkResult.java  Controller.java  Main.java  MatMultBenchmarkResult.java
gui/JavaFX/src/main/java/com/parallelbenchmark/: BenchmarkResult.java  Controller.java  Main.java  MatMultBenchmarkResult.java
gui/JavaFX/src/main/java/com/parallelbenchmark/controllers/: MainController.java  MatMultBenchmarkController.java
gui/JavaFX/src/main/java/com/parallelbenchmark/utils/: IOUtils.java
gui/JavaFX/src/main/resources/com/matmultbench/: main.fxml
gui/JavaFX/src/main/resources/com/parallelbenchmark/: MatrixMultView.fxml  TestView.fxml  main.fxml
scripts/: build.py
src/: CMakeLists.txt  benchmarks.h  main.cpp  matrix.h  simd_traits.h  thread_pool.cpp  thread_pool.h  utils.h
src/include/: benchmark.hpp  benchmarks.hpp  constants.hpp  matrix.hpp  matrix_benchmark_prog_opts.hpp  matrix_benchmarks.hpp  ocl_utils.hpp  thread_pool.hpp  utils.hpp
src/kernels/: mat_mult.cl  test.cl
src/src/: thread_pool.cpp  utils.cpp
test/: CMakeLists.txt  tests_main.cpp
test/fixtures/: CMakeLists.txt  fixture_with_random.hpp  test_utils.hpp
test/tests/: CMakeLists.txt  matrix_tests.cpp
